# cqrs-architecture-with-python

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  install.sh  mypy.ini  pyproject.toml  setup.cfg  start.sh
.github/workflows/: ci.yml
src/: app.py  containers.py  exceptions.py  rest.py  settings.py
src/adapters/: event_publisher_adapter.py  mongo_db_connector_adapter.py  redis_adapter.py
src/domain/: utils.py
src/domain/base/: dto.py  entity.py  event.py  value_object.py
src/domain/base/ports/: event_adapter_interface.py
src/domain/delivery/adapters/: cost_calculator_adapter.py
src/domain/delivery/ports/: cost_calculator_interface.py
src/domain/maps/adapters/: google_maps_adapter.py
src/domain/maps/model/: value_objects.py
src/domain/maps/ports/: maps_adapter_interface.py
src/domain/order/controllers/: order_controller.py
src/domain/order/dtos/: order_dtos.py
src/domain/order/exceptions/: order_exceptions.py
src/domain/order/model/: entities.py  events.py  value_objects.py
src/domain/order/ports/: order_event_store_repository_interface.py  order_repository_interface.py  order_service_interface.py
src/domain/order/repositories/: order_event_store_repository.py  order_repository.py
src/domain/order/services/: order_service.py
src/domain/payment/adapters/: paypal_adapter.py
src/domain/payment/model/: value_objects.py
src/domain/payment/ports/: payment_adapter_interface.py
src/domain/product/adapters/: product_adapter.py
src/domain/product/model/: entities.py  value_objects.py
src/domain/product/ports/: product_adapter_interface.py
src/ports/: cache_interface.py
src/tests/unit/: test_containers.py
src/tests/unit/adapters/: test_event_publisher_adapter.py  test_mongo_db_connector_adapter.py  test_redis_adapter.py
src/tests/unit/domain/delivery/adapters/: test_cost_calculator_adapter.py
src/tests/unit/domain/maps/adapters/: test_google_maps_adapter.py
src/tests/unit/domain/order/controllers/: test_order_controller.py
src/utils/: logger.py
(+5 files in other folders)
